# gastocerto

./: .env  .env.example  .gitignore  CHANGELOG.md  README Kaio.md  README.md  manage.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
gastos/: entrega-intermediaria.py  forms.py  models.py  services.py  urls.py  views.py
gastos/migrations/: 0001_initial.py
gastos/templates/gastos/: base.html  confirmar_remocao.html  form.html  lista.html
tests/: test_integracao.py  test_models.py  test_views.py
