[project]
name = "gastocerto"
version = "1.0.0"
description = "Gerenciador de gastos pessoais para controle financeiro acessível."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Seu Nome Aqui" }]
license = { text = "MIT" }
dependencies = ["Django>=4.2,<5.0"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
testpaths = ["tests"]
# ... (outras coisas do seu projeto) ...

[tool.ruff]
# Aqui estarão as configurações antigas que já existiam
line-length = 88 

# E aqui você cola a nossa nova regra (tudo no mesmo bloco)
exclude = [
    "*/migrations/*",
    "venv",
]

# ... (resto do arquivo) ...
exclude = [
    "*/migrations/*",
    "venv",
]
